# Thesis

./: .ghci  .gitignore  Birth.hs  Change.hs  Death.hs  Diagram.hs  How to do it O(n).txt  Maps.hs  O(n).hs  Relations.hs  Stuff.hs  Thesis-Code.cabal  Time.txt  build.bat  cultureMap.bat  defaultOptions.txt  diagram.hs  heatmap.bat  heatmap.cfg  main.hs  populationMap.bat  prof.bat  professionMap.bat  rebuild.bat  stack.yaml  temp-new.txt  temp.txt  valuesTerrain.txt
data/: cultureMap.cfg  heatmap.cfg  populationMap.cfg  professionMap.cfg
data/oldData/: cultureMap.cfg  professionMap.cfg
src/: Birth.hs  Change.hs  Death.hs  Definitions.hs  Maps.hs  Relations.hs  Renderings.hs  Stuff.hs  main.hs
