name:                Thesis-Code
version:             0.1.0.0
license-file:        LICENSE
author:              Rickard Fridvall
maintainer:          partim@live.com
build-type:          Simple

-- extra-source-files:  

cabal-version:       >=1.10


executable main
  main-is: main.hs

  other-modules: Birth, Change, Death, Definitions, Relations Stuff

  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:    

  ghc-options: -O3 -feager-blackholing -fno-warn-tabs -threaded -rtsopts -funfolding-use-threshold1000 -funfolding-keeness-factor1000

  build-depends: storable-tuple == 0.0.2, criterion == 1.1.0.0, monad-parallel == 0.7.2.0, containers == 0.5.6.2, mersenne-random-pure64 == 0.2.0.4, diagrams == 1.3, diagrams-lib == 1.3.0.3, diagrams-svg == 1.3.1.7, diagrams-contrib == 1.3.0.8, vector == 0.10.12.3, random == 1.1, primitive == 0.6.1.0, split == 0.2.2, base >=4.8 && <4.9

  -- Directories containing source files.
  hs-source-dirs: src-old

  default-language: Haskell2010

